k8s/apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  namespace: searxng
  labels:
    app: searxng
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
