k8s/apps/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: searxng
  labels:
    app: searxng
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: searxng-service
      port:
        number: 8080
  tls:
    - hosts:
        - searxng.tail57bf10.ts.net
